chore: add keycloak env variable

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PG_VERSION=16.2-alpine
 KC_DB=postgres
 KC_DB_URL=jdbc:postgresql://postgres/keycloak
 KC_DB_USERNAME=keycloak
+KC_HOSTNAME=localhost
 KC_HEALTH_ENABLED=true
 DB_SCHEMA=public
 KC_DB_PASSWORD=password
@@ -11,6 +12,7 @@ KEYCLOAK_ADMIN=keycloackadmin
 KEYCLOAK_ADMIN_PASSWORD=keycloakpassword
 DB_DATABASE=keycloak
 PROXY_ADDRESS_FORWARDING=true
+KC_PROXY=edge
 
 # Caddy
 
